--- a/__tests__/fixtures/tailwind-output-no-color-opacity.css
+++ b/__tests__/fixtures/tailwind-output-no-color-opacity.css
@@ -22258,6 +22258,14 @@ video {
   vertical-align: text-bottom;
 }
 
+.align-sub {
+  vertical-align: sub;
+}
+
+.align-super {
+  vertical-align: super;
+}
+
 .visible {
   visibility: visible;
 }
@@ -48281,6 +48289,14 @@ video {
     vertical-align: text-bottom;
   }
 
+  .sm\:align-sub {
+    vertical-align: sub;
+  }
+
+  .sm\:align-super {
+    vertical-align: super;
+  }
+
   .sm\:visible {
     visibility: visible;
   }
@@ -74272,6 +74288,14 @@ video {
 
   .md\:align-text-bottom {
     vertical-align: text-bottom;
+  }
+
+  .md\:align-sub {
+    vertical-align: sub;
+  }
+
+  .md\:align-super {
+    vertical-align: super;
   }
 
   .md\:visible {
@@ -100267,6 +100291,14 @@ video {
     vertical-align: text-bottom;
   }
 
+  .lg\:align-sub {
+    vertical-align: sub;
+  }
+
+  .lg\:align-super {
+    vertical-align: super;
+  }
+
   .lg\:visible {
     visibility: visible;
   }
@@ -126260,6 +126292,14 @@ video {
     vertical-align: text-bottom;
   }
 
+  .xl\:align-sub {
+    vertical-align: sub;
+  }
+
+  .xl\:align-super {
+    vertical-align: super;
+  }
+
   .xl\:visible {
     visibility: visible;
   }
@@ -152251,6 +152291,14 @@ video {
 
   .\32xl\:align-text-bottom {
     vertical-align: text-bottom;
+  }
+
+  .\32xl\:align-sub {
+    vertical-align: sub;
+  }
+
+  .\32xl\:align-super {
+    vertical-align: super;
   }
 
   .\32xl\:visible {
