--- a/__tests__/fixtures/tailwind-output.css
+++ b/__tests__/fixtures/tailwind-output.css
@@ -24814,6 +24814,14 @@ video {
   vertical-align: text-bottom;
 }
 
+.align-sub {
+  vertical-align: sub;
+}
+
+.align-super {
+  vertical-align: super;
+}
+
 .visible {
   visibility: visible;
 }
@@ -53393,6 +53401,14 @@ video {
     vertical-align: text-bottom;
   }
 
+  .sm\:align-sub {
+    vertical-align: sub;
+  }
+
+  .sm\:align-super {
+    vertical-align: super;
+  }
+
   .sm\:visible {
     visibility: visible;
   }
@@ -81940,6 +81956,14 @@ video {
 
   .md\:align-text-bottom {
     vertical-align: text-bottom;
+  }
+
+  .md\:align-sub {
+    vertical-align: sub;
+  }
+
+  .md\:align-super {
+    vertical-align: super;
   }
 
   .md\:visible {
@@ -110491,6 +110515,14 @@ video {
     vertical-align: text-bottom;
   }
 
+  .lg\:align-sub {
+    vertical-align: sub;
+  }
+
+  .lg\:align-super {
+    vertical-align: super;
+  }
+
   .lg\:visible {
     visibility: visible;
   }
@@ -139040,6 +139072,14 @@ video {
     vertical-align: text-bottom;
   }
 
+  .xl\:align-sub {
+    vertical-align: sub;
+  }
+
+  .xl\:align-super {
+    vertical-align: super;
+  }
+
   .xl\:visible {
     visibility: visible;
   }
@@ -167587,6 +167627,14 @@ video {
 
   .\32xl\:align-text-bottom {
     vertical-align: text-bottom;
+  }
+
+  .\32xl\:align-sub {
+    vertical-align: sub;
+  }
+
+  .\32xl\:align-super {
+    vertical-align: super;
   }
 
   .\32xl\:visible {
