Add break-keep-all for wordBreak utility

--- a/__tests__/fixtures/tailwind-output-flagged.css
+++ b/__tests__/fixtures/tailwind-output-flagged.css
@@ -24851,6 +24851,10 @@ video {
   overflow-wrap: break-word;
 }
 
+.break-keep-all {
+  word-break: keep-all;
+}
+
 .break-all {
   word-break: break-all;
 }
