--- a/__tests__/fixtures/tailwind-output-important.css
+++ b/__tests__/fixtures/tailwind-output-important.css
@@ -24851,6 +24851,10 @@ video {
   overflow-wrap: break-word !important;
 }
 
+.break-keep-all {
+  word-break: keep-all !important;
+}
+
 .break-all {
   word-break: break-all !important;
 }
