--- a/__tests__/fixtures/tailwind-output-no-color-opacity.css
+++ b/__tests__/fixtures/tailwind-output-no-color-opacity.css
@@ -22295,6 +22295,10 @@ video {
   overflow-wrap: break-word;
 }
 
+.break-keep-all {
+  word-break: keep-all;
+}
+
 .break-all {
   word-break: break-all;
 }
