Fix: Search Magnifier Icon.

--- a/src/css/docsearch.css
+++ b/src/css/docsearch.css
@@ -91,6 +91,7 @@
   width: 1.5rem;
   height: 1.5rem;
   background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M21 21L15 15M17 10C17 13.866 13.866 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10Z' stroke='%2306b6d4' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+  background-repeat: no-repeat;
 }
 
 .DocSearch-MagnifierLabel svg {
