--- a/__tests__/fixtures/tailwind-output-important.css
+++ b/__tests__/fixtures/tailwind-output-important.css
@@ -22167,8 +22167,16 @@ video {
   fill: currentColor !important;
 }
 
+.fill-none {
+  fill: none !important;
+}
+
 .stroke-current {
   stroke: currentColor !important;
+}
+
+.stroke-none {
+  stroke: none !important;
 }
 
 .stroke-0 {
@@ -50746,8 +50754,16 @@ video {
     fill: currentColor !important;
   }
 
+  .sm\:fill-none {
+    fill: none !important;
+  }
+
   .sm\:stroke-current {
     stroke: currentColor !important;
+  }
+
+  .sm\:stroke-none {
+    stroke: none !important;
   }
 
   .sm\:stroke-0 {
@@ -79295,8 +79311,16 @@ video {
     fill: currentColor !important;
   }
 
+  .md\:fill-none {
+    fill: none !important;
+  }
+
   .md\:stroke-current {
     stroke: currentColor !important;
+  }
+
+  .md\:stroke-none {
+    stroke: none !important;
   }
 
   .md\:stroke-0 {
@@ -107844,8 +107868,16 @@ video {
     fill: currentColor !important;
   }
 
+  .lg\:fill-none {
+    fill: none !important;
+  }
+
   .lg\:stroke-current {
     stroke: currentColor !important;
+  }
+
+  .lg\:stroke-none {
+    stroke: none !important;
   }
 
   .lg\:stroke-0 {
@@ -136393,8 +136425,16 @@ video {
     fill: currentColor !important;
   }
 
+  .xl\:fill-none {
+    fill: none !important;
+  }
+
   .xl\:stroke-current {
     stroke: currentColor !important;
+  }
+
+  .xl\:stroke-none {
+    stroke: none !important;
   }
 
   .xl\:stroke-0 {
@@ -164942,8 +164982,16 @@ video {
     fill: currentColor !important;
   }
 
+  .\32xl\:fill-none {
+    fill: none !important;
+  }
+
   .\32xl\:stroke-current {
     stroke: currentColor !important;
+  }
+
+  .\32xl\:stroke-none {
+    stroke: none !important;
   }
 
   .\32xl\:stroke-0 {
