--- a/__tests__/fixtures/tailwind-output.css
+++ b/__tests__/fixtures/tailwind-output.css
@@ -10856,6 +10856,10 @@ video {
   display: none;
 }
 
+.inline-table {
+  display: inline-table;
+}
+
 .flex-row {
   flex-direction: row;
 }
@@ -39452,6 +39456,10 @@ video {
     display: none;
   }
 
+  .sm\:inline-table {
+    display: inline-table;
+  }
+
   .sm\:flex-row {
     flex-direction: row;
   }
@@ -68003,6 +68011,10 @@ video {
 
   .md\:hidden {
     display: none;
+  }
+
+  .md\:inline-table {
+    display: inline-table;
   }
 
   .md\:flex-row {
@@ -96558,6 +96570,10 @@ video {
     display: none;
   }
 
+  .lg\:inline-table {
+    display: inline-table;
+  }
+
   .lg\:flex-row {
     flex-direction: row;
   }
@@ -125111,6 +125127,10 @@ video {
     display: none;
   }
 
+  .xl\:inline-table {
+    display: inline-table;
+  }
+
   .xl\:flex-row {
     flex-direction: row;
   }
@@ -153662,6 +153682,10 @@ video {
 
   .\32xl\:hidden {
     display: none;
+  }
+
+  .\32xl\:inline-table {
+    display: inline-table;
   }
 
   .\32xl\:flex-row {
