--- a/__tests__/fixtures/tailwind-output-no-color-opacity.css
+++ b/__tests__/fixtures/tailwind-output-no-color-opacity.css
@@ -9078,6 +9078,10 @@ video {
   border-style: none;
 }
 
+.border-hidden {
+  border-style: hidden;
+}
+
 .border-0 {
   border-width: 0px;
 }
@@ -35118,6 +35122,10 @@ video {
     border-style: none;
   }
 
+  .sm\:border-hidden {
+    border-style: hidden;
+  }
+
   .sm\:border-0 {
     border-width: 0px;
   }
@@ -61113,6 +61121,10 @@ video {
 
   .md\:border-none {
     border-style: none;
+  }
+
+  .md\:border-hidden {
+    border-style: hidden;
   }
 
   .md\:border-0 {
@@ -87112,6 +87124,10 @@ video {
     border-style: none;
   }
 
+  .lg\:border-hidden {
+    border-style: hidden;
+  }
+
   .lg\:border-0 {
     border-width: 0px;
   }
@@ -113109,6 +113125,10 @@ video {
     border-style: none;
   }
 
+  .xl\:border-hidden {
+    border-style: hidden;
+  }
+
   .xl\:border-0 {
     border-width: 0px;
   }
@@ -139104,6 +139124,10 @@ video {
 
   .\32xl\:border-none {
     border-style: none;
+  }
+
+  .\32xl\:border-hidden {
+    border-style: hidden;
   }
 
   .\32xl\:border-0 {
