--- a/jit/tests/basic-usage.test.css
+++ b/jit/tests/basic-usage.test.css
@@ -576,6 +576,12 @@
 .opacity-90 {
   opacity: 0.9;
 }
+.mix-multiply {
+  mix-blend-mode: multiply;
+}
+.mix-saturation {
+  mix-blend-mode: saturation;
+}
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000),
