--- a/__tests__/fixtures/tailwind-output-no-color-opacity.css
+++ b/__tests__/fixtures/tailwind-output-no-color-opacity.css
@@ -9302,6 +9302,10 @@ video {
   display: contents;
 }
 
+.list-item {
+  display: list-item;
+}
+
 .hidden {
   display: none;
 }
@@ -35354,6 +35358,10 @@ video {
     display: contents;
   }
 
+  .sm\:list-item {
+    display: list-item;
+  }
+
   .sm\:hidden {
     display: none;
   }
@@ -61361,6 +61369,10 @@ video {
 
   .md\:contents {
     display: contents;
+  }
+
+  .md\:list-item {
+    display: list-item;
   }
 
   .md\:hidden {
@@ -87372,6 +87384,10 @@ video {
     display: contents;
   }
 
+  .lg\:list-item {
+    display: list-item;
+  }
+
   .lg\:hidden {
     display: none;
   }
@@ -113381,6 +113397,10 @@ video {
     display: contents;
   }
 
+  .xl\:list-item {
+    display: list-item;
+  }
+
   .xl\:hidden {
     display: none;
   }
@@ -139388,6 +139408,10 @@ video {
 
   .\32xl\:contents {
     display: contents;
+  }
+
+  .\32xl\:list-item {
+    display: list-item;
   }
 
   .\32xl\:hidden {
