--- a/__tests__/fixtures/tailwind-output.css
+++ b/__tests__/fixtures/tailwind-output.css
@@ -10864,6 +10864,10 @@ video {
   display: contents;
 }
 
+.list-item {
+  display: list-item;
+}
+
 .hidden {
   display: none;
 }
@@ -39472,6 +39476,10 @@ video {
     display: contents;
   }
 
+  .sm\:list-item {
+    display: list-item;
+  }
+
   .sm\:hidden {
     display: none;
   }
@@ -68035,6 +68043,10 @@ video {
 
   .md\:contents {
     display: contents;
+  }
+
+  .md\:list-item {
+    display: list-item;
   }
 
   .md\:hidden {
@@ -96602,6 +96614,10 @@ video {
     display: contents;
   }
 
+  .lg\:list-item {
+    display: list-item;
+  }
+
   .lg\:hidden {
     display: none;
   }
@@ -125167,6 +125183,10 @@ video {
     display: contents;
   }
 
+  .xl\:list-item {
+    display: list-item;
+  }
+
   .xl\:hidden {
     display: none;
   }
@@ -153730,6 +153750,10 @@ video {
 
   .\32xl\:contents {
     display: contents;
+  }
+
+  .\32xl\:list-item {
+    display: list-item;
   }
 
   .\32xl\:hidden {
