--- a/__tests__/fixtures/tailwind-output.css
+++ b/__tests__/fixtures/tailwind-output.css
@@ -29141,67 +29141,67 @@ video {
   animation: bounce 1s infinite;
 }
 
-.mix-normal {
+.mix-blend-normal {
   mix-blend-mode: normal;
 }
 
-.mix-multiply {
+.mix-blend-multiply {
   mix-blend-mode: multiply;
 }
 
-.mix-screen {
+.mix-blend-screen {
   mix-blend-mode: screen;
 }
 
-.mix-overlay {
+.mix-blend-overlay {
   mix-blend-mode: overlay;
 }
 
-.mix-darken {
+.mix-blend-darken {
   mix-blend-mode: darken;
 }
 
-.mix-lighten {
+.mix-blend-lighten {
   mix-blend-mode: lighten;
 }
 
-.mix-color-dodge {
+.mix-blend-color-dodge {
   mix-blend-mode: color-dodge;
 }
 
-.mix-color-burn {
+.mix-blend-color-burn {
   mix-blend-mode: color-burn;
 }
 
-.mix-hard-light {
+.mix-blend-hard-light {
   mix-blend-mode: hard-light;
 }
 
-.mix-soft-light {
+.mix-blend-soft-light {
   mix-blend-mode: soft-light;
 }
 
-.mix-difference {
+.mix-blend-difference {
   mix-blend-mode: difference;
 }
 
-.mix-exclusion {
+.mix-blend-exclusion {
   mix-blend-mode: exclusion;
 }
 
-.mix-hue {
+.mix-blend-hue {
   mix-blend-mode: hue;
 }
 
-.mix-saturation {
+.mix-blend-saturation {
   mix-blend-mode: saturation;
 }
 
-.mix-color {
+.mix-blend-color {
   mix-blend-mode: color;
 }
 
-.mix-luminosity {
+.mix-blend-luminosity {
   mix-blend-mode: luminosity;
 }
 
@@ -57769,67 +57769,67 @@ video {
     animation: bounce 1s infinite;
   }
 
-  .sm\:mix-normal {
+  .sm\:mix-blend-normal {
     mix-blend-mode: normal;
   }
 
-  .sm\:mix-multiply {
+  .sm\:mix-blend-multiply {
     mix-blend-mode: multiply;
   }
 
-  .sm\:mix-screen {
+  .sm\:mix-blend-screen {
     mix-blend-mode: screen;
   }
 
-  .sm\:mix-overlay {
+  .sm\:mix-blend-overlay {
     mix-blend-mode: overlay;
   }
 
-  .sm\:mix-darken {
+  .sm\:mix-blend-darken {
     mix-blend-mode: darken;
   }
 
-  .sm\:mix-lighten {
+  .sm\:mix-blend-lighten {
     mix-blend-mode: lighten;
   }
 
-  .sm\:mix-color-dodge {
+  .sm\:mix-blend-color-dodge {
     mix-blend-mode: color-dodge;
   }
 
-  .sm\:mix-color-burn {
+  .sm\:mix-blend-color-burn {
     mix-blend-mode: color-burn;
   }
 
-  .sm\:mix-hard-light {
+  .sm\:mix-blend-hard-light {
     mix-blend-mode: hard-light;
   }
 
-  .sm\:mix-soft-light {
+  .sm\:mix-blend-soft-light {
     mix-blend-mode: soft-light;
   }
 
-  .sm\:mix-difference {
+  .sm\:mix-blend-difference {
     mix-blend-mode: difference;
   }
 
-  .sm\:mix-exclusion {
+  .sm\:mix-blend-exclusion {
     mix-blend-mode: exclusion;
   }
 
-  .sm\:mix-hue {
+  .sm\:mix-blend-hue {
     mix-blend-mode: hue;
   }
 
-  .sm\:mix-saturation {
+  .sm\:mix-blend-saturation {
     mix-blend-mode: saturation;
   }
 
-  .sm\:mix-color {
+  .sm\:mix-blend-color {
     mix-blend-mode: color;
   }
 
-  .sm\:mix-luminosity {
+  .sm\:mix-blend-luminosity {
     mix-blend-mode: luminosity;
   }
 
@@ -86398,67 +86398,67 @@ video {
     animation: bounce 1s infinite;
   }
 
-  .md\:mix-normal {
+  .md\:mix-blend-normal {
     mix-blend-mode: normal;
   }
 
-  .md\:mix-multiply {
+  .md\:mix-blend-multiply {
     mix-blend-mode: multiply;
   }
 
-  .md\:mix-screen {
+  .md\:mix-blend-screen {
     mix-blend-mode: screen;
   }
 
-  .md\:mix-overlay {
+  .md\:mix-blend-overlay {
     mix-blend-mode: overlay;
   }
 
-  .md\:mix-darken {
+  .md\:mix-blend-darken {
     mix-blend-mode: darken;
   }
 
-  .md\:mix-lighten {
+  .md\:mix-blend-lighten {
     mix-blend-mode: lighten;
   }
 
-  .md\:mix-color-dodge {
+  .md\:mix-blend-color-dodge {
     mix-blend-mode: color-dodge;
   }
 
-  .md\:mix-color-burn {
+  .md\:mix-blend-color-burn {
     mix-blend-mode: color-burn;
   }
 
-  .md\:mix-hard-light {
+  .md\:mix-blend-hard-light {
     mix-blend-mode: hard-light;
   }
 
-  .md\:mix-soft-light {
+  .md\:mix-blend-soft-light {
     mix-blend-mode: soft-light;
   }
 
-  .md\:mix-difference {
+  .md\:mix-blend-difference {
     mix-blend-mode: difference;
   }
 
-  .md\:mix-exclusion {
+  .md\:mix-blend-exclusion {
     mix-blend-mode: exclusion;
   }
 
-  .md\:mix-hue {
+  .md\:mix-blend-hue {
     mix-blend-mode: hue;
   }
 
-  .md\:mix-saturation {
+  .md\:mix-blend-saturation {
     mix-blend-mode: saturation;
   }
 
-  .md\:mix-color {
+  .md\:mix-blend-color {
     mix-blend-mode: color;
   }
 
-  .md\:mix-luminosity {
+  .md\:mix-blend-luminosity {
     mix-blend-mode: luminosity;
   }
 
@@ -115027,67 +115027,67 @@ video {
     animation: bounce 1s infinite;
   }
 
-  .lg\:mix-normal {
+  .lg\:mix-blend-normal {
     mix-blend-mode: normal;
   }
 
-  .lg\:mix-multiply {
+  .lg\:mix-blend-multiply {
     mix-blend-mode: multiply;
   }
 
-  .lg\:mix-screen {
+  .lg\:mix-blend-screen {
     mix-blend-mode: screen;
   }
 
-  .lg\:mix-overlay {
+  .lg\:mix-blend-overlay {
     mix-blend-mode: overlay;
   }
 
-  .lg\:mix-darken {
+  .lg\:mix-blend-darken {
     mix-blend-mode: darken;
   }
 
-  .lg\:mix-lighten {
+  .lg\:mix-blend-lighten {
     mix-blend-mode: lighten;
   }
 
-  .lg\:mix-color-dodge {
+  .lg\:mix-blend-color-dodge {
     mix-blend-mode: color-dodge;
   }
 
-  .lg\:mix-color-burn {
+  .lg\:mix-blend-color-burn {
     mix-blend-mode: color-burn;
   }
 
-  .lg\:mix-hard-light {
+  .lg\:mix-blend-hard-light {
     mix-blend-mode: hard-light;
   }
 
-  .lg\:mix-soft-light {
+  .lg\:mix-blend-soft-light {
     mix-blend-mode: soft-light;
   }
 
-  .lg\:mix-difference {
+  .lg\:mix-blend-difference {
     mix-blend-mode: difference;
   }
 
-  .lg\:mix-exclusion {
+  .lg\:mix-blend-exclusion {
     mix-blend-mode: exclusion;
   }
 
-  .lg\:mix-hue {
+  .lg\:mix-blend-hue {
     mix-blend-mode: hue;
   }
 
-  .lg\:mix-saturation {
+  .lg\:mix-blend-saturation {
     mix-blend-mode: saturation;
   }
 
-  .lg\:mix-color {
+  .lg\:mix-blend-color {
     mix-blend-mode: color;
   }
 
-  .lg\:mix-luminosity {
+  .lg\:mix-blend-luminosity {
     mix-blend-mode: luminosity;
   }
 
@@ -143656,67 +143656,67 @@ video {
     animation: bounce 1s infinite;
   }
 
-  .xl\:mix-normal {
+  .xl\:mix-blend-normal {
     mix-blend-mode: normal;
   }
 
-  .xl\:mix-multiply {
+  .xl\:mix-blend-multiply {
     mix-blend-mode: multiply;
   }
 
-  .xl\:mix-screen {
+  .xl\:mix-blend-screen {
     mix-blend-mode: screen;
   }
 
-  .xl\:mix-overlay {
+  .xl\:mix-blend-overlay {
     mix-blend-mode: overlay;
   }
 
-  .xl\:mix-darken {
+  .xl\:mix-blend-darken {
     mix-blend-mode: darken;
   }
 
-  .xl\:mix-lighten {
+  .xl\:mix-blend-lighten {
     mix-blend-mode: lighten;
   }
 
-  .xl\:mix-color-dodge {
+  .xl\:mix-blend-color-dodge {
     mix-blend-mode: color-dodge;
   }
 
-  .xl\:mix-color-burn {
+  .xl\:mix-blend-color-burn {
     mix-blend-mode: color-burn;
   }
 
-  .xl\:mix-hard-light {
+  .xl\:mix-blend-hard-light {
     mix-blend-mode: hard-light;
   }
 
-  .xl\:mix-soft-light {
+  .xl\:mix-blend-soft-light {
     mix-blend-mode: soft-light;
   }
 
-  .xl\:mix-difference {
+  .xl\:mix-blend-difference {
     mix-blend-mode: difference;
   }
 
-  .xl\:mix-exclusion {
+  .xl\:mix-blend-exclusion {
     mix-blend-mode: exclusion;
   }
 
-  .xl\:mix-hue {
+  .xl\:mix-blend-hue {
     mix-blend-mode: hue;
   }
 
-  .xl\:mix-saturation {
+  .xl\:mix-blend-saturation {
     mix-blend-mode: saturation;
   }
 
-  .xl\:mix-color {
+  .xl\:mix-blend-color {
     mix-blend-mode: color;
   }
 
-  .xl\:mix-luminosity {
+  .xl\:mix-blend-luminosity {
     mix-blend-mode: luminosity;
   }
 
@@ -172285,67 +172285,67 @@ video {
     animation: bounce 1s infinite;
   }
 
-  .\32xl\:mix-normal {
+  .\32xl\:mix-blend-normal {
     mix-blend-mode: normal;
   }
 
-  .\32xl\:mix-multiply {
+  .\32xl\:mix-blend-multiply {
     mix-blend-mode: multiply;
   }
 
-  .\32xl\:mix-screen {
+  .\32xl\:mix-blend-screen {
     mix-blend-mode: screen;
   }
 
-  .\32xl\:mix-overlay {
+  .\32xl\:mix-blend-overlay {
     mix-blend-mode: overlay;
   }
 
-  .\32xl\:mix-darken {
+  .\32xl\:mix-blend-darken {
     mix-blend-mode: darken;
   }
 
-  .\32xl\:mix-lighten {
+  .\32xl\:mix-blend-lighten {
     mix-blend-mode: lighten;
   }
 
-  .\32xl\:mix-color-dodge {
+  .\32xl\:mix-blend-color-dodge {
     mix-blend-mode: color-dodge;
   }
 
-  .\32xl\:mix-color-burn {
+  .\32xl\:mix-blend-color-burn {
     mix-blend-mode: color-burn;
   }
 
-  .\32xl\:mix-hard-light {
+  .\32xl\:mix-blend-hard-light {
     mix-blend-mode: hard-light;
   }
 
-  .\32xl\:mix-soft-light {
+  .\32xl\:mix-blend-soft-light {
     mix-blend-mode: soft-light;
   }
 
-  .\32xl\:mix-difference {
+  .\32xl\:mix-blend-difference {
     mix-blend-mode: difference;
   }
 
-  .\32xl\:mix-exclusion {
+  .\32xl\:mix-blend-exclusion {
     mix-blend-mode: exclusion;
   }
 
-  .\32xl\:mix-hue {
+  .\32xl\:mix-blend-hue {
     mix-blend-mode: hue;
   }
 
-  .\32xl\:mix-saturation {
+  .\32xl\:mix-blend-saturation {
     mix-blend-mode: saturation;
   }
 
-  .\32xl\:mix-color {
+  .\32xl\:mix-blend-color {
     mix-blend-mode: color;
   }
 
-  .\32xl\:mix-luminosity {
+  .\32xl\:mix-blend-luminosity {
     mix-blend-mode: luminosity;
   }
 
